--- a/src/AdtManager/AdtManager/appsettings.json
+++ b/src/AdtManager/AdtManager/appsettings.json
@@ -7,5 +7,8 @@
     }
   },
   "AllowedHosts": "*",
-  "AdtHostName": ""
+  "AdtHostName": "",
+  "IotHub": {
+    "IotHubConnectionString": ""
+  }
 }
